# franka_project

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch  rviz_only.launch
plot_trajectory/: desired_plot.eps  desired_traj.py  executed_plot.eps  executed_plot2.eps  get_robot_traj.py  only_tf.bag  original_traj.py  plot_joint_states.py  plot_traj.py  plot_trajectories.py  robot_traj.npz  traj.bag  traj2.bag  trajectory_positions.bag
src/: circle_trajectory.cpp
